[tool.poetry]
name = "oj"
version = "1.7.0"
description = "Open source online judge system based on Python and Vue."
authors = ["virusdefender <virusdefender@outlook.com>"]
maintainers = ["Mikucat <admin@mikucat.me>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/QingdaoU/OnlineJudge"

[tool.poetry.dependencies]
python = "^3.8"
django = ">=3.2.24,<3.3.0"
django-cas-ng = "^5.0.1"
django-dbconn-retry = "^0.1.7"
django-dramatiq = "^0.11.6"
django-redis = "^5.4.0"
djangorestframework = "^3.14.0"
dramatiq = "^1.16.0"
entrypoints = "^0.4"
envelopes = "^0.4"
gunicorn = "^21.2.0"
jsonfield = "^3.1.0"
otpauth = "^1.0.1"
pillow = "^10.2.0"
psycopg2 = "^2.9.9"
python-dateutil = "^2.8.2"
qrcode = "^7.4.2"
raven = "^6.10.0"
xlsxwriter = "^3.1.9"

[tool.poetry.group.dev.dependencies]
coverage = "^7.4.1"
ruff = "^0.2.1"

[tool.ruff]
exclude = [".venv"]

[tool.ruff.format]
quote-style = "single"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
